--- a/static/css/base.css
+++ b/static/css/base.css
@@ -221,6 +221,12 @@ textarea {
     background-color: #e53935;
 }
 
+/*--------------------------------------------------------------------------------------------------records page*/
+
+.record-image {
+    height: 14rem;
+    width: 14rem;
+}
 
 /*--------------------------------------------------------------------------------------------------cart page*/
 
