--- a/record_store/templates/records/edit_record.html
+++ b/record_store/templates/records/edit_record.html
@@ -14,13 +14,13 @@
     <div class="add-beer-container">
         <div class="row">
             <div class="col s10 offset-s1 m6 offset-m3">
-                <form method="POST" action="{% url 'add_record' record.id %}" class="form" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'edit_record' record.id %}" class="form" enctype="multipart/form-data">
                     {% csrf_token %} 
                     {{ form | crispy}}
                     <div class="center-align submit-button">                    
                         <button id="submit-button" class="btn bd-btn">
-                            <span>Add Record</span>
-                            <i class="material-icons right">add</i>
+                            <span>Edit Record</span>
+                            <i class="material-icons right">update</i>
                         </button>
                         <a href="{% url 'records' %}" class="btn bd-btn">
                             <span>Back to record collection</span>
